# MeetYou

./: .gitignore  CMakeLists.txt  Jamfile  README.md  accept_actions.cpp  basic_classes.cpp  basic_classes.h  bd_script.txt  bd_tables_conectors.cpp  bd_tables_conectors.h  chat.cpp  chat.h  cpp_project.drawio  creator_fabr_method.cpp  fail.cpp  fail.h  handler_classes.cpp  handler_classes.h  http_session.cpp  http_session.h  http_session.hpp  listener.cpp  listener.h  main.cpp  message.h  message_chat_view.cpp  queue.cpp  queue.h  request.cpp  request.h  request_chat_handler.cpp  request_chat_handler.h  router.cpp  router.h  runner.cpp  runner.h  server.cpp  server.h  shared_state.cpp  shared_state.hpp  (+6 more)
Diagramms/: Class_diagramm.drawio  Data_base.drawio
cascad/: cascad.sln
cascad/cascad/: EventCteator.cpp  EventCteator.h  EventEditor.cpp  EventEditor.h  Resource.h  SQLConnection.cpp  SQLConnection.h  User.cpp  User.h  cascad.cpp  cascad.rc  cascad.vcxproj  cascad.vcxproj.filters
diagram/: bd_scripts  cpp_project.drawio
for_presentation/: present.html  scripts.js
include/: AuthMiddleware.h  CommonChatView.h  EventCreator.h  EventEditor.h  HttpSession.h  IAuthMiddleware.h  IHttpSession.h  IListener.h  IRouter.h  IRunner.h  Listener.h  Md5.h  MessageChatView.h  MysqlConnection.h  Queue.h  ResponseCreater.h  Router.h  Runner.h  SharedState.hpp  User.h  UserChatView.h  View.h  ViewEvent.h  ViewEventFollow.h  ViewEventHobby.h  ViewFindEvent.h  ViewFollow.h  ViewOther.h  ViewRecommend.h  ViewRegistration.h  ViewUser.h  ViewUserFolList.h  ViewUserFollow.h  ViewUserHobby.h  WebsocketSession.h  Work.h  accept_actions.h  auth_middleware.h  auth_middleware_interface.h  basic_classes.h  (+31 more)
nlohmann/: json.hpp
recommendation/: main.cpp
some_clients/: client.cpp  coroutine_client.cpp
src/: AuthMiddleware.cpp  CommonChatView.cpp  EventCreator.cpp  EventEditor.cpp  Fail.cpp  HttpSession.cpp  IRouter.cpp  Listener.cpp  Md5.cpp  MessageChatView.cpp  MysqlConnection.cpp  Queue.cpp  ResponseCreater.cpp  Router.cpp  Runner.cpp  SharedState.cpp  UserChatView.cpp  View.cpp  ViewEvent.cpp  ViewEventFollow.cpp  ViewEventHobby.cpp  ViewFindEvent.cpp  ViewFollow.cpp  ViewOther.cpp  ViewRecommend.cpp  ViewRegistration.cpp  ViewUser.cpp  ViewUserFolList.cpp  ViewUserFollow.cpp  ViewUserHobby.cpp  WebsocketSession.cpp  accept_actions.cpp  auth_middleware.cpp  basic_classes.cpp  bd_tables_conectors.cpp  chat.cpp  chat_server.cpp  common_chat.cpp  connector.cpp  creator_fabr_method.cpp  (+22 more)
tests/: gmock_tests.cpp  gtest_main.cpp  test.cpp  testViewEvent.cpp  testViewEventFollow.cpp  testViewEventHobby.cpp  testViewReg.cpp  testViewUser.cpp  testViewUserFollow.cpp  testViewUserHobby.cpp  test_gmock.cpp  tests.cpp
tests/gmock/: GHttpSession.h  http_session.h  listener.h
